Fixing the z-index issue and adding LDS modal classes to the modal

--- a/include/style.css
+++ b/include/style.css
@@ -486,3 +486,6 @@
 #mnuTab2.cv-advfilt-tab {
   overflow: visible;
 }
+.custom-width-350 {
+	width: 350px !important;
+}
